# tokenizer

./: .gitignore  Cargo.toml  README.md  config.json  test.html  test.txt
src/: main.rs
src/application/: mod.rs  use_cases.rs
src/domain/: entities.rs  mod.rs  ports.rs
src/infrastructure/: config.rs  mod.rs  token_counter.rs
src/presentation/: cli.rs
