[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to compute token lengths of various file types"
authors = ["User"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.32", features = ["full"] }
regex = "1.9"
log = "0.4"
env_logger = "0.11.8"
pdf = "0.9.0"
tokenizers = { version = "0.21.1", features = ["http"] }
